# vpcl

./: CMakeLists.txt  README.md
pybindings/: CMakeLists.txt  vpcl_processes.h  vpcl_register.cxx  vpcl_register.h
pybindings/processes/: vpcl_compute_descriptor_process.cxx  vpcl_compute_spin_image_process.cxx  vpcl_corrs_based_whitening_process.cxx  vpcl_feature_based_rigid_transform_process.cxx  vpcl_geo_accuracy_error_process.cxx  vpcl_ply2pcd_process.cxx  vpcl_register_ia_process.cxx  vpcl_register_ia_rough_scale.cxx  vpcl_register_ia_scale_process.cxx  vpcl_register_icp_process.cxx  vpcl_register_icp_scale_process.cxx  vpcl_trans_geo_accuracy_process.cxx
pymodule/: CMakeLists.txt  vpcl_registry.cxx  vpcl_registry.h
pyscripts/: dbrec3d_pcl_adaptor.py  dbrec3d_register.py  vpcl_adaptor.py  vpcl_register.py  vpcl_registration_adaptor.py  vpcl_util_adaptor.py
registration/: CMakeLists.txt  add_gauss_noise_to_cams.cxx  compute_geo_cam_stats.cxx  reg_test.cxx  registration.h  run_registration_ia.cxx  run_registration_ia_scale.cxx  run_registration_ransac.cxx  run_registration_svd.cxx  transform_cameras_rand.cxx  visualize.cxx  vpcl_corrs_util.cxx  vpcl_corrs_util.h  vpcl_transform_util.cxx  vpcl_transform_util.h  vpcl_transformation_estimation_svd_srt.h
rply/: CMakeLists.txt
util/: CMakeLists.txt  vpcl_features_util.cxx  vpcl_features_util.h  vpcl_io_util.cxx  vpcl_io_util.h  vpcl_io_util.txx
